fixed footer, play with nav spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,8 +34,7 @@ li {
   border-color: #025e73;
   border-width: 2px;
   border-radius: 10px;
-  margin-right: 10vw;
-  justify-items: center;
+  margin-right: 18vw;
   
 }
 .horchata {
